--- a/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
@@ -8,7 +8,7 @@
  
     <div class="tab-content">
         <div id="tab1" class="tab active"> {# Tab principal #}
-            <div class="example" style="width: 96%; background: #eee; visibility: visible;">
+            
     <strong>Dados Pessoais</strong><br />
     Nome: {{ pessoa.nome }}<br />
     Data de nascimento: {{ pessoa.dataNascimento|date('d/m/Y') }}<br />
@@ -23,20 +23,31 @@
         {% endif %}
     <br />
     CPF: {{ pessoa.cpf }}<br />
+    <div id="rg_area">
     RG:
     {% if pessoa.rg is null %}
-        <a id="rg" class="btn" href="{{ path('pessoa_rg_new', {'id':pessoa.id}) }}">Cadastrar</a><br /><br />
+        {% image '@CadpazBundle/Resources/public/images/button_add2.png' %}
+        <a id="rg" href="{{ path('pessoa_rg_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+        {% endimage %}
     {% else %}
-        <br />
+        {% image '@CadpazBundle/Resources/public/images/button_edit2.png' %}
+        <a id="rg" href="{{ path('pessoa_rg_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+        {% endimage %}
         &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.rg.numero }}<br />
         &nbsp;&nbsp;&nbsp;&nbsp;Data de expedição: {{ pessoa.rg.dataExpedicao | date('d/m/Y') }}<br />
         &nbsp;&nbsp;&nbsp;&nbsp;Órgão expedidor: {{ pessoa.rg.orgaoExpedidor }}<br />
     {% endif %}
+    </div>
+    <div id="te_area">
     Título Eleitoral:
     {% if pessoa.titulo is null %} 
-        <a id="te" class="btn" href="{{ path('pessoa_titulo_new', {'id':pessoa.id}) }}">Cadastrar</a><br />
+        {% image '@CadpazBundle/Resources/public/images/button_add2.png' %}
+        <a id="te" href="{{ path('pessoa_titulo_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+        {% endimage %}
     {% else %}
-        <br />
+        {% image '@CadpazBundle/Resources/public/images/button_edit2.png' %}
+        <a id="te" href="{{ path('pessoa_titulo_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+        {% endimage %}
         &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.titulo.numero | default("Não cadastrado")}}<br />
         &nbsp;&nbsp;&nbsp;&nbsp;Zona: {{ pessoa.titulo.zona | default("Não cadastrado")}}<br />
         &nbsp;&nbsp;&nbsp;&nbsp;Seção: {{ pessoa.titulo.secao | default("Não cadastrado")}}<br />
@@ -44,23 +55,36 @@
         &nbsp;&nbsp;&nbsp;&nbsp;Município: {{ pessoa.titulo.municipio | default("Não cadastrado")}}<br />
         &nbsp;&nbsp;&nbsp;&nbsp;UF: {{ pessoa.titulo.uf | default("Não cadastrado")}}<br />
     {% endif %}
+    </div>
+    <div id="pis_area">
     PIS:
     {% if pessoa.pis is null %}
-        Não cadastrado<br />
+        {% image '@CadpazBundle/Resources/public/images/button_add2.png' %}
+        <a id="pis" href="{{ path('pessoa_pis_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+        {% endimage %}
     {% else %}
-        <br />
+        {% image '@CadpazBundle/Resources/public/images/button_edit2.png' %}
+        <a id="pis" href="{{ path('pessoa_pis_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+        {% endimage %}
         &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.pis.numero | default("Não cadastrado")}}<br />
         &nbsp;&nbsp;&nbsp;&nbsp;Data de emissão: {{ pessoa.pis.dataEmissao | date('d/m/Y') }}<br />
     {% endif %}
+    </div>
+    <div id="ctps_area">
     CTPS:
     {% if pessoa.ctps is null %}
-        Não cadastrado<br />
+        {% image '@CadpazBundle/Resources/public/images/button_add2.png' %}
+        <a id="ctps" href="{{ path('pessoa_ctps_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+        {% endimage %}
     {% else %}
-        <br />
+        {% image '@CadpazBundle/Resources/public/images/button_edit2.png' %}
+        <a id="ctps" href="{{ path('pessoa_ctps_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+        {% endimage %}
         &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.ctps.numero | default("Não cadastrado")}}<br />
         &nbsp;&nbsp;&nbsp;&nbsp;Série: {{ pessoa.ctps.serie | default("Não cadastrado")}}<br />
         &nbsp;&nbsp;&nbsp;&nbsp;UF: {{ pessoa.ctps.uf | default("Não cadastrado")}}<br />
     {% endif %}
+    </div>
     Possui certidão de nascimento: {% if pessoa.certidaoNascimento %}Sim{% else %}Não{% endif %}<br />
     Possui certidão de casamento: {% if pessoa.certidaoCasamento %}Sim{% else %}Não{% endif %}<br />
     Possui cartão de vacina: {% if pessoa.cartaoVacina %}Sim{% else %}Não{% endif %}<br />
@@ -68,13 +92,15 @@
     Nome da mãe: {{ pessoa.nomeMae }}<br />
     Cor infomada: {{ pessoa.corInformada }}<br />
     Data de cadastro: {{ pessoa.dataCadastro | date('d/m/Y') }}<br />
-</div>
+
         </div>
  
         <div id="tab2" class="tab">
-            <div style="width: 96%; background: #eee; visibility: visible" class="example">
+            
                 <strong>Telefones</strong><br />
-                {% set fone = null %}
+                {% image '@CadpazBundle/Resources/public/images/button_add2.png' %}
+                <a id="ctps" href="{{ path('pessoa_ctps_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+                {% endimage %}
                 {% for telefone in pessoa.telefones %}
                     <div class="example" style="visibility: visible; width: 96%; padding-bottom: 15px;  background: #ddf;">
                         Numero: {{ telefone.numero }}<br />
@@ -82,11 +108,12 @@
                         Obs: {{ telefone.obs }}
                     </div>
                     <div class="spacer"></div>
-                    {% set fone = 1 %}
                 {% endfor %}
-                {% if fone is null %}Nenhum telefone cadastrado.<br />{% endif %}
+                <div class="spacer"></div>
                 <strong>Endereços</strong><br />
-                {% set end = null %}
+                {% image '@CadpazBundle/Resources/public/images/button_add2.png' %}
+                <a id="ctps" href="{{ path('pessoa_ctps_new', {'id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
+                {% endimage %}
                 {% for endereco in pessoa.enderecos %}
                     <div class="example" style="visibility: visible; width: 96%; word-wrap: break-word;  background: #ddf;">
                         {{ endereco.nome }}<br />
@@ -99,8 +126,21 @@
                     </div>
                      <div class="spacer"></div>
                 {% endfor %}
-                {% if end is null %}Nenhum endereço cadastrado.<br>{% endif %}
-            </div>
+                {#{% set end = null %}
+                {% for endereco in pessoa.enderecos %}
+                    <div class="example" style="visibility: visible; width: 96%; word-wrap: break-word;  background: #ddf;">
+                        {{ endereco.nome }}<br />
+                        {{ endereco.logradouro }}, {{ endereco.numero }}<br />
+                        {{ endereco.bairro }}<br />
+                        {{ endereco.cep }}<br />
+                        {{ endereco.municipio }} - {{ endereco.uf }}<br />
+                        {{ endereco.obs }}
+                        {% set end = 1 %}
+                    </div>
+                     <div class="spacer"></div>
+                {% endfor %}
+                {% if end is null %}Nenhum endereço cadastrado.<br>{% endif %}#}
+            
         </div>
  
         <div id="tab3" class="tab">
@@ -149,28 +189,30 @@
     });
     
     
-    jQuery('#te, #rg').on('click', function(e) {
+    jQuery('#te, #rg, #pis, #ctps').on('click', function(e) {
         
-        var userPage = $("#userDetails").html();
+        //$("#userDetails").slideUp('fast');
         
-        //alert(userPage);
+        var elemento = "#"+$(this).attr('id')+"_area";
+        
+        window.userDetails = $("#userDetails").html();
         
         $.ajax({
-                            url: $(this).attr('href'),
-                            //method: 'POST',
-                            //data: {'cpf': $("#cpf").val()},
-                            success: function(result) {
-                                
-                                
-                                
-                                $("#userDetails").html(result);
-                               // $("#userDetails").css('visibility','visible');
-                               //alert(result);
-                            }
-                        });
-        
-        
-        
+            url: $(this).attr('href'),
+                //method: 'POST',
+                //data: {'cpf': $("#cpf").val()},
+                success: function(result) {
+                    
+                    
+                    //alert(elemento);
+                    
+                    $(elemento).html(result);
+                    //$("#userDetails").slideDown('fast');
+                    // $("#userDetails").css('visibility','visible');
+                    //alert(result);
+                }
+        });
+
         e.preventDefault();
     });
     
