--- a/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
@@ -150,6 +150,7 @@
             $('#userDetails').html('');
             $('#userDetails').slideUp(200);
             $('#dataArea').html(responseText);
+            //alert(responseText);
             $('#dataArea').slideDown(200);
             
         }
