Formulario do questionario e visualizacao

--- a/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
@@ -167,7 +167,8 @@
                         {% image '@CadpazBundle/Resources/public/images/button_add2.png' %}
                         <a id="questionario" href="{{ path('questionario_new', {'pessoa_id':pessoa.id}) }}"><img src="{{ asset_url }}" alt="Example" /></a><br />
                         {% endimage %}
-                    
+                {% else %}
+                    {% render controller('CadpazBundle:Questionario:view', {'id': pessoa.questionario.id}) %}
                 {% endif %}
             </div>
         </div>
